2008-08-18 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/pointer-capture-applet.c:
	* src/dwell-click-applet.c:
	* src/mt-common.c:
	* src/mt-common.h:

	Switch to gtk_show_uri and move the code to mt-common.

	* configure.ac: Bump gtk requirement to 2.13.1
	* Makfile.am: Add --disable-scrollkeeper
	
	* help/mousetweaks.omf.in: Add .omf template
	* help/Makefile.am: Move legal.xml to DOC_ENTITIES
	* help/C/mousetweaks.xml: Add "maintainer" and "description" roles
	needed by scrollkeeper.

2008-08-18 Francesco Fumanti <frfumanti@svn.gnome.org>

	* configure.ac:
	* README:

	Post release version bump: 2.23.91

2008-08-18 Francesco Fumanti <frfumanti@svn.gnome.org>

	* NEWS: Prepare 2.23.90 release.

2008-08-04 Francesco Fumanti <frfumanti@svn.gnome.org>

	* configure.ac:
	* README:

	Post release version bump: 2.23.90

2008-06-16 Francesco Fumanti <frfumanti@svn.gnome.org>

	* NEWS: Prepare 2.23.6 release.

2008-08-04 Gerd Kohlberger <gerdk@svn.gnome.org>

	* configure.ac: Check for libgnomeui
	* src/Makefile.am: Use GNOME_COMPILE_WARNINGS.
 
	* src/mt-ctw.c: Add header file.
	* src/mt-main.c: (main): spi_leaks might be used uninitialized.
	* src/mt-pidfile.c: Add header file.

	Fix new compile warnings.

2008-07-28 Gerd Kohlberger <gerdk@svn.gnome.org>

	Patch by Matthias Clasen. Fixes #545059.

	* src/mt-common.h:
	* data/DwellClick_Factory.server.in.in:
	* data/PointerCapture_Factory.server.in.in:
	Use standard icon name.

2008-07-20 Gerd Kohlberger <gerdk@svn.gnome.org>

	* configure.ac:
	* README:

	Post release version bump: 2.23.6

2008-07-20 Gerd Kohlberger <gerdk@svn.gnome.org>
	
	* NEWS: Prepare 2.23.5 release.

2008-07-16 Gerd Kohlberger <gerdk@svn.gnome.org>
	
	Patch by Thadeu Lima de Souza Cascardo (bug #543272)

	* configure.ac: Add dependency to xcursor

2008-07-09 Gerd Kohlberger <gerdk@svn.gnome.org>

	* Makefile.am: Add ofm.make and xmldocs.make to EXTRA_DIST.
	Disable schemas install for distcheck.

2008-07-08 Gerd Kohlberger <gerdk@svn.gnome.org>
